# IOResearchPracticeWork

./: .gitignore  README.md  result.txt  script.sh
file_creator/: a.out  create_two_files.cpp  create_txt_files.cpp
src/: CMakeLists.txt  main.c  main.cpp  standart_library_io.c  standart_library_io.h  universal_unix_io.c  universal_unix_io.h
src/libc/: CMakeLists.txt  standart_library_io.c  standart_library_io.h
src/libcpp/: CMakeLists.txt  stl_io.cpp  stl_io.h
src/tools/: CMakeLists.txt  tools.c  tools.cpp  tools.h
